{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 165,
  "lineage": "1278ee36-0647-8083-3bdb-75d72c101b22",
  "resources": [
    {
      "module": "module.my-alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:790646685306:loadbalancer/app/my-alb/a96b00ac6c27e63f",
            "arn_suffix": "app/my-alb/a96b00ac6c27e63f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-795401030.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:790646685306:loadbalancer/app/my-alb/a96b00ac6c27e63f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "security_groups": [
              "sg-0718d1da051a04e15"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-093246ffece247f36"
              },
              {
                "subnet_id": "subnet-0b584a4b067c652a2"
              },
              {
                "subnet_id": "subnet-0c032ef803f7317ee"
              }
            ],
            "subnets": [
              "subnet-093246ffece247f36",
              "subnet-0b584a4b067c652a2",
              "subnet-0c032ef803f7317ee"
            ],
            "vpc_id": "vpc-09ed259725ff88883",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.my-vpc.aws_subnet.pub-sub",
            "module.my-vpc.aws_vpc.vpc1",
            "module.my-vpc.data.aws_availability_zones.az1"
          ]
        }
      ]
    },
    {
      "module": "module.my-alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:790646685306:listener/app/my-alb/a96b00ac6c27e63f/b7a042e1b9ec5dbf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:790646685306:targetgroup/target-0/30dcdc736d1d7d77",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:790646685306:listener/app/my-alb/a96b00ac6c27e63f/b7a042e1b9ec5dbf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:790646685306:loadbalancer/app/my-alb/a96b00ac6c27e63f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_subnet.pub-sub",
            "module.my-vpc.aws_vpc.vpc1",
            "module.my-vpc.data.aws_availability_zones.az1",
            "module.my-alb.aws_lb.my-alb",
            "module.my-alb.aws_lb_target_group.tg1"
          ]
        }
      ]
    },
    {
      "module": "module.my-alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:790646685306:targetgroup/target-1/3de1680daf05d3a7",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:790646685306:listener-rule/app/my-alb/a96b00ac6c27e63f/b7a042e1b9ec5dbf/5766ec6d79de2f7b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*/sanju/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:790646685306:listener-rule/app/my-alb/a96b00ac6c27e63f/b7a042e1b9ec5dbf/5766ec6d79de2f7b",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:790646685306:listener/app/my-alb/a96b00ac6c27e63f/b7a042e1b9ec5dbf",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc1",
            "module.my-vpc.data.aws_availability_zones.az1",
            "module.my-alb.aws_lb.my-alb",
            "module.my-alb.aws_lb_listener.my-alb-listener",
            "module.my-alb.aws_lb_target_group.tg1",
            "module.my-vpc.aws_subnet.pub-sub"
          ]
        }
      ]
    },
    {
      "module": "module.my-alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:790646685306:targetgroup/target-0/30dcdc736d1d7d77",
            "arn_suffix": "targetgroup/target-0/30dcdc736d1d7d77",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:790646685306:targetgroup/target-0/30dcdc736d1d7d77",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-0",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09ed259725ff88883"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:790646685306:targetgroup/target-1/3de1680daf05d3a7",
            "arn_suffix": "targetgroup/target-1/3de1680daf05d3a7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:790646685306:targetgroup/target-1/3de1680daf05d3a7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09ed259725ff88883"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.my-alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790646685306:security-group/sg-0dc45ecad16ad8765",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc45ecad16ad8765",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "790646685306",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ed259725ff88883"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e6967d6eed11b00",
            "association_id": "eipassoc-02e2e14be5843c58f",
            "domain": "vpc",
            "id": "eipalloc-08e6967d6eed11b00",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-08eb71b70a0701053",
            "private_dns": "ip-10-0-0-244.ap-south-1.compute.internal",
            "private_ip": "10.0.0.244",
            "public_dns": "ec2-3-111-10-153.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.10.153",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Boston",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0567e0d2b4b2169ae",
            "arn": "arn:aws:ec2:ap-south-1:790646685306:instance/i-0f445e3358fe51a0b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f445e3358fe51a0b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dec13.pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0334fa30ac8234682",
            "private_dns": "ip-10-0-0-102.ap-south-1.compute.internal",
            "private_ip": "10.0.0.102",
            "public_ip": "13.126.98.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03c4e603dcef98360",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-093246ffece247f36",
            "tags": {
              "Name": "Boston"
            },
            "tags_all": {
              "Name": "Boston"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0718d1da051a04e15"
            ]
          },
          "dependencies": [
            "module.my-vpc.aws_subnet.pub-sub",
            "module.my-vpc.aws_vpc.vpc1",
            "module.my-vpc.data.aws_availability_zones.az1"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790646685306:internet-gateway/igw-01c97c3f5252f5591",
            "id": "igw-01c97c3f5252f5591",
            "owner_id": "790646685306",
            "vpc_id": "vpc-09ed259725ff88883"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e6967d6eed11b00",
            "connectivity_type": "public",
            "id": "nat-0b239f510cd8d52b7",
            "network_interface_id": "eni-08eb71b70a0701053",
            "private_ip": "10.0.0.244",
            "public_ip": "3.111.10.153",
            "subnet_id": "subnet-093246ffece247f36"
          },
          "dependencies": [
            "module.my-vpc.aws_eip.eip",
            "module.my-vpc.aws_subnet.pub-sub",
            "module.my-vpc.aws_vpc.vpc1",
            "module.my-vpc.data.aws_availability_zones.az1"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790646685306:route-table/rtb-0613d17a42e3da8a0",
            "id": "rtb-0613d17a42e3da8a0",
            "owner_id": "790646685306",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c97c3f5252f5591",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ed259725ff88883"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_internet_gateway.igw",
            "module.my-vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2-prv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790646685306:route-table/rtb-03e4440aa3c72c4cd",
            "id": "rtb-03e4440aa3c72c4cd",
            "owner_id": "790646685306",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b239f510cd8d52b7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09ed259725ff88883"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_nat_gateway.my-nat",
            "module.my-vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eac17820e68d4ffd",
            "route_table_id": "rtb-0613d17a42e3da8a0",
            "subnet_id": "subnet-093246ffece247f36"
          },
          "dependencies": [
            "module.my-vpc.aws_route_table.rt1-pub",
            "module.my-vpc.aws_subnet.pub-sub",
            "module.my-vpc.aws_vpc.vpc1",
            "module.my-vpc.data.aws_availability_zones.az1",
            "module.my-vpc.aws_internet_gateway.igw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec432ab6a5b20e7e",
            "route_table_id": "rtb-0613d17a42e3da8a0",
            "subnet_id": "subnet-0c032ef803f7317ee"
          },
          "dependencies": [
            "module.my-vpc.aws_subnet.pub-sub",
            "module.my-vpc.aws_vpc.vpc1",
            "module.my-vpc.data.aws_availability_zones.az1",
            "module.my-vpc.aws_internet_gateway.igw",
            "module.my-vpc.aws_route_table.rt1-pub"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036a81240f3024f40",
            "route_table_id": "rtb-0613d17a42e3da8a0",
            "subnet_id": "subnet-0b584a4b067c652a2"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc1",
            "module.my-vpc.data.aws_availability_zones.az1",
            "module.my-vpc.aws_internet_gateway.igw",
            "module.my-vpc.aws_route_table.rt1-pub",
            "module.my-vpc.aws_subnet.pub-sub"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt1-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0738fd1140bf595fd",
            "route_table_id": "rtb-03e4440aa3c72c4cd",
            "subnet_id": "subnet-03fff7dc3b2a5aaa0"
          },
          "dependencies": [
            "module.my-vpc.aws_eip.eip",
            "module.my-vpc.aws_nat_gateway.my-nat",
            "module.my-vpc.aws_route_table.rt2-prv",
            "module.my-vpc.aws_subnet.prv-sub",
            "module.my-vpc.aws_subnet.pub-sub",
            "module.my-vpc.aws_vpc.vpc1",
            "module.my-vpc.data.aws_availability_zones.az1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a24796348aa032d",
            "route_table_id": "rtb-03e4440aa3c72c4cd",
            "subnet_id": "subnet-0c17a8db2cdc9497d"
          },
          "dependencies": [
            "module.my-vpc.aws_route_table.rt2-prv",
            "module.my-vpc.aws_subnet.prv-sub",
            "module.my-vpc.aws_subnet.pub-sub",
            "module.my-vpc.aws_vpc.vpc1",
            "module.my-vpc.data.aws_availability_zones.az1",
            "module.my-vpc.aws_eip.eip",
            "module.my-vpc.aws_nat_gateway.my-nat"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066361a438926b1a3",
            "route_table_id": "rtb-03e4440aa3c72c4cd",
            "subnet_id": "subnet-03eae1823de0daba4"
          },
          "dependencies": [
            "module.my-vpc.aws_subnet.pub-sub",
            "module.my-vpc.aws_vpc.vpc1",
            "module.my-vpc.data.aws_availability_zones.az1",
            "module.my-vpc.aws_eip.eip",
            "module.my-vpc.aws_nat_gateway.my-nat",
            "module.my-vpc.aws_route_table.rt2-prv",
            "module.my-vpc.aws_subnet.prv-sub"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790646685306:subnet/subnet-03fff7dc3b2a5aaa0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-03fff7dc3b2a5aaa0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "790646685306",
            "tags": {
              "Name": "prv-sub-0"
            },
            "tags_all": {
              "Name": "prv-sub-0"
            },
            "vpc_id": "vpc-09ed259725ff88883"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc1",
            "module.my-vpc.data.aws_availability_zones.az1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790646685306:subnet/subnet-0c17a8db2cdc9497d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0c17a8db2cdc9497d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "790646685306",
            "tags": {
              "Name": "prv-sub-1"
            },
            "tags_all": {
              "Name": "prv-sub-1"
            },
            "vpc_id": "vpc-09ed259725ff88883"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc1",
            "module.my-vpc.data.aws_availability_zones.az1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790646685306:subnet/subnet-03eae1823de0daba4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-03eae1823de0daba4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "790646685306",
            "tags": {
              "Name": "prv-sub-2"
            },
            "tags_all": {
              "Name": "prv-sub-2"
            },
            "vpc_id": "vpc-09ed259725ff88883"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc1",
            "module.my-vpc.data.aws_availability_zones.az1"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790646685306:subnet/subnet-093246ffece247f36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-093246ffece247f36",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "790646685306",
            "tags": {
              "Name": "sub-0"
            },
            "tags_all": {
              "Name": "sub-0"
            },
            "vpc_id": "vpc-09ed259725ff88883"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc1",
            "module.my-vpc.data.aws_availability_zones.az1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790646685306:subnet/subnet-0c032ef803f7317ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c032ef803f7317ee",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "790646685306",
            "tags": {
              "Name": "sub-1"
            },
            "tags_all": {
              "Name": "sub-1"
            },
            "vpc_id": "vpc-09ed259725ff88883"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc1",
            "module.my-vpc.data.aws_availability_zones.az1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790646685306:subnet/subnet-0b584a4b067c652a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0b584a4b067c652a2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "790646685306",
            "tags": {
              "Name": "sub-2"
            },
            "tags_all": {
              "Name": "sub-2"
            },
            "vpc_id": "vpc-09ed259725ff88883"
          },
          "dependencies": [
            "module.my-vpc.data.aws_availability_zones.az1",
            "module.my-vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:790646685306:vpc/vpc-09ed259725ff88883",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-018e9c319099ca26f",
            "default_route_table_id": "rtb-06bd6fd497fc941a7",
            "default_security_group_id": "sg-0718d1da051a04e15",
            "dhcp_options_id": "dopt-0155112ac96ab4a15",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09ed259725ff88883",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06bd6fd497fc941a7",
            "owner_id": "790646685306"
          }
        }
      ]
    }
  ]
}